mario/ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mario
  labels:
    istio-injection: disabled
