mario/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mario-service
spec:
  selector:
    app: mario
  ports:
    - name: http
      protocol: TCP
      port: 8080
  type: ClusterIP
