mario/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mario-service-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: private-group
    alb.ingress.kubernetes.io/group.order: "2"
    alb.ingress.kubernetes.io/subnets: subnet-072e50be3db51dc28, subnet-07914ee5285b48ecd
    external-dns.alpha.kubernetes.io/hostname: mario.ads.dev.nicovideo.jp
spec:
  ingressClassName: alb
  rules:
    - host: mario.ads.dev.nicovideo.jp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mario-service
                port:
                  number: 8080
